--- a/Data_eda.ipynb
+++ b/Data_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "b2b2a4aa-0694-46e4-87e2-129eef7eb622",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "2bb61cc5-ab2b-4572-a817-3b0641740c16",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
        "[900 rows x 23 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "fb112598-f638-47a9-b69d-8ed842b0ce1a",
    "metadata": {},
    "outputs": [],
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "9c2383c5-b5c6-43d1-bc07-b969871a671d",
    "metadata": {},
    "outputs": [],
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "0626d020-5b5e-48c0-97ea-f2ece0ae8dcb",
    "metadata": {},
    "outputs": [],
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 24,
    "id": "e1894698-6c96-4d05-98d5-153eec4b7f16",
    "metadata": {},
    "outputs": [
@@ -604,7 +604,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "id": "da43a728-a16e-46b6-b474-2453fc31440b",
    "metadata": {},
    "outputs": [],
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 26,
    "id": "f684f292-ffb4-49f6-a140-f5948d292ac1",
    "metadata": {},
    "outputs": [
@@ -640,7 +640,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,9 @@
   {
    "cell_type": "markdown",
    "id": "701dcc81-958b-4a85-a051-1bc1837943b9",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# 2. Exploratory Data Analysis\n",
     "- Lets analyse and find hidden patterns, trends within the dataset.\n",
@@ -2052,18 +2054,30 @@
     "  1. Among all the tools only python, excel is mostly present in the job_description column. Therefore python, excel are the most demanded and requrirement tool for a data scientist.\n",
     "  2. Suprisingly r studio or r programming language is not required for a data scientist in India it seems like.\n",
     "  3. In terms of cloud tools and data preprocessing tools aws and spark are for a data scientist.\n",
-    "  4. Considering the trend in AI, LLMs and working with LLMs will have a huge advantage for a data scientist."
+    "  4. Considering the trend in AI, LLMs and working with LLMs will have a huge advantage for a data scientist.\n",
+    "  5. Looks like Genai skills is not required for a Data Scientist."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 34,
    "id": "44aa0e59-6763-4fb0-bc66-1a8e54d4cdb6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# since 'r' column doesn't have any useful information we can just remove it\n",
     "df_copy.drop('r', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "9dbbb89f-07df-4518-900e-bca83f4268cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# similarly 'genai' columns doesn't have any use lets remove it\n",
+    "df_copy.drop('genai', axis=1, inplace=True)"
    ]
   },
   {
@@ -2973,11 +2987,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "388fb682-5b50-45d2-a72e-9a3bf53205e7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# saving the file \n",
+    "df_copy.to_csv('eda_jobs_data.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
